2006-08-15 Harri Pitkänen <hatapitk@iki.fi>

        * Start replacing the old dlopen/dlsym based dynamic linking
	  mechanism required by binary only Soikko with ordinary compile
	  time dynamic linking. This version works and removes a lot
	  of unnecessary code, but more changes should follow.

2006-07-26 Harri Pitkänen <hatapitk@iki.fi>

	* Fix the build system for new documentation

2006-07-26 Teemu Likonen <tlikonen@iki.fi>

	* Update README, LUEMINUT and manual pages.

	* Remove html pages. They didn't contain anything that is not in the
	  manual pages.

2006-06-16 Harri Pitkänen <hatapitk@iki.fi>

	* Fix build failure with GCC 4.1 due to extra qualifications
	* Increase version number to 0.4.3

2006-06-16 Harri Pitkänen <hatapitk@iki.fi>

	* Add GPL headers to source files that were written by Pauli
	  but did not have the licence header (Pauli has stated that
	  everything in tmispell written by him can be distributed
	  under the GPL).
	* Remove files generated by autoconf/automake from version
	  control.
	* Update README

2006-05-28 Harri Pitkänen <hatapitk@iki.fi>

	* Make libenchant plugin compile on Debian Sarge

2006-05-27 Harri Pitkänen <hatapitk@iki.fi>

	* Automake fixes, disable Finnish documentation

2006-05-27 Harri Pitkänen <hatapitk@iki.fi>

	* Adapted to use Voikko instead of Soikko

2005-10-22 19:30 +0000 [r2879-2881]  pauli <pauli@localhost>

	* doc/sgml/Makefile.am, doc/sgml/fi.po: Update.

	* po/fi.po: To utf8

	* debian/changelog, debian/rules: Bump.

2005-03-28 15:25 +0000 [r2563]  pauli <pauli@localhost>

	* doc/devel: Ignore html.

2004-12-05 17:14 +0000 [r2419-2422]  pauli <pauli@localhost>

	* tmispell.spec: Requires gettext

	* enchant/soikko_provider.cc: Adapt to the new internal utf8

	* enchant/Makefile.am: Fix build.

	* src/tmispell.cc, src/spell.cc: Fix error handling...

2004-11-20 19:30 +0000 [r2405-2408]  pauli <pauli@localhost>

	* src/charset.cc, src/regexp.cc, src/config_file.hh, src/filter.hh,